--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,7 @@
 *~
-*.clib
-*.cmd
-*.dat
-*.d
-*.ko
-*.lp
-*.mldylib
-*.mllib
-*.native
-*.o
-*.order
-*.pdf
+*.dot.svg
 *.pyc
-*.sol
-*.swp
-*.symvers
 .ipynb_checkpoints
-_build
-_tags
 .merlin
-configure
-data/demands/
-data/prediction/bin
-data/prediction/obj
-data/prediction/scripts/synthetic_demands
-data/prediction/synthetic.txt
-data/prediction/synthetic.txt_ElasticNetRegression
-data/prediction/synthetic.txt_LinearRegression
-data/prediction/synthetic.txt_lastOne
-end_host/kernel/.tmp_versions
-end_host/kernel/modyates.mod.c
-experiments/testbed/results
-fftout
+_build
 gurobi.log
-INSTALL.txt
-META
-myocamlbuild.ml
-README.txt
-routes/
-setup.data
-setup.log
-setup.ml
-*bin*
